fix: Estilos para visibilidad de bloques laterales.

--- a/snippets/conectatech-post.scss
+++ b/snippets/conectatech-post.scss
@@ -268,10 +268,12 @@ a {
 }
 
 // Bloque de navegación de quizes
-#mod_quiz_navblock {
+// Bloque de administración de marcadores
+#mod_quiz_navblock,
+.block_admin_bookmarks {
 	background-color: var(--conecta-midnight);
-	border: 1px solid rgb(255 255 255 / 60%);
-	box-shadow: 0 2px 8px rgb(255 255 255 / 40%);
+	border: 1px solid rgb(255 255 255 / 60%) !important;
+	box-shadow: 0 2px 8px rgb(255 255 255 / 40%) !important;
 	.qnbutton {
 		background-color: var(--conecta-tech-blue) !important;
 	}
